# CppExperiments

./: .gitignore  README.md
src/0001_QObject_Custom_Deleter/: CMakeLists.txt  CustomDeleter.md  main.cpp
src/0002_Friend_Template_Operator/: main.cpp
src/0003_void_t_with_is_same/: CMakeLists.txt  main.cpp
src/0004_QML_Component_With_URL/: CMakeLists.txt  Loader.md  conanfile.txt
src/0004_QML_Component_With_URL/qml/: MyRect.qml  View.qml  main.qml  qml.qrc
src/0004_QML_Component_With_URL/src/: main.cpp
src/0005_Does_QGADGET_Support_Strong_Types/: CMakeLists.txt  StrongType.md  conanfile.txt
src/0005_Does_QGADGET_Support_Strong_Types/qml/: main.qml
src/0005_Does_QGADGET_Support_Strong_Types/src/: Facade.h  Gadget.h  main.cpp
src/0006_Using_QProperty_in_QGadget/: CMakeLists.txt  QProperty.md
src/0006_Using_QProperty_in_QGadget/qml/: main.qml
src/0006_Using_QProperty_in_QGadget/src/: Facade.h  Gadget.h  main.cpp
